[project]
name = "doozy"
version = "0.1.0"
description = "To Do"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-pagination>=0.15.0",
    "fastapi[standard]>=0.121.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "prettytable>=3.17.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
