[project]
name = "doozy"
version = "0.1.0"
description = "To Do"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-pagination>=0.15.0",
    "fastapi[standard]>=0.121.2",
    "fractional-indexing>=0.1.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[tool.poe.tasks]
test      = "pytest src/routers/tests/ src/tests/ -v"
lint      = "ruff check src/"
format    = "ruff format src/"
typecheck = "ty check src/"
run       = "uvicorn app.main:app --reload --app-dir src"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "poethepoet>=0.42.1",
    "prettytable>=3.17.0",
    "pytest>=9.0.2",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
