[project]
name = "doozy"
version = "0.1.0"
description = "To Do"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "anthropic>=0.91.0",
    "certifi>=2025.11.12",
    "fastapi-pagination>=0.15.0",
    "fastapi[standard]>=0.121.2",
    "fractional-indexing>=0.1.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "casbin>=1.36.0",
    "logfire[fastapi,sqlalchemy,httpx]>=3.0.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[tool.logfire]
ignore_no_config = true

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", "src/conftest.py"]

[tool.poe.tasks]
test      = "pytest src/routers/tests/ src/tests/ -v"
coverage  = "pytest src/routers/tests/ src/tests/ --cov=src --cov-report=term-missing --cov-fail-under=74"
lint      = "ruff check src/"
format    = "ruff format src/"
typecheck = "ty check src/"
run       = "uvicorn app.main:app --reload --app-dir src"
[tool.poe.tasks.cli]
cmd = "python -m cli.main"
env = {PYTHONPATH = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
    "poethepoet>=0.42.1",
    "prettytable>=3.17.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
